added discover page

--- a/analytics.html
+++ b/analytics.html
@@ -176,7 +176,7 @@
                     <ul id="sidebarnav">
                         <li class="nav-devider"></li>
                         <li> <a href="index.html" aria-expanded="false"><i class="fa fa-tachometer"></i><span class="hide-menu">Dashboard</span></a></li>
-                        <li> <a href="#" aria-expanded="false"><i class="fa fa-search"></i><span class="hide-menu">Discover</span></a></li>
+                        <li> <a href="discover.html" aria-expanded="false"><i class="fa fa-search"></i><span class="hide-menu">Discover</span></a></li>
                         <li> <a href="analytics.html" aria-expanded="false"><i class="fa fa-bar-chart"></i><span class="hide-menu">Analytics</span></a></li>
                         <li> <a href="#" aria-expanded="false"><i class="fa fa-exchange"></i><span class="hide-menu">Trade</span></a></li>
                     </ul>
@@ -191,11 +191,11 @@
             <!-- Bread crumb -->
             <div class="row page-titles">
                 <div class="col-md-5 align-self-center">
-                    <h3 class="text-primary">Dashboard</h3> </div>
+                    <h3 class="text-primary">Analytics</h3> </div>
                 <div class="col-md-7 align-self-center">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                        <li class="breadcrumb-item active">Dashboard</li>
+                        <li class="breadcrumb-item active">Analytics</li>
                     </ol>
                 </div>
             </div>
