--- a/discover.html
+++ b/discover.html
@@ -10,15 +10,14 @@
     <meta name="author" content="">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="images/logo.png">
-    <title>Armada | Dashboard</title>
+    <title>Armada | Analytics</title>
+
+    <link href="css/lib/chartist/chartist.min.css" rel="stylesheet">
+	<link href="css/lib/owl.carousel.min.css" rel="stylesheet" />
+    <link href="css/lib/owl.theme.default.min.css" rel="stylesheet" />
     <!-- Bootstrap Core CSS -->
     <link href="css/lib/bootstrap/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-
-    <link href="css/lib/calendar2/semantic.ui.min.css" rel="stylesheet">
-    <link href="css/lib/calendar2/pignose.calendar.min.css" rel="stylesheet">
-    <link href="css/lib/owl.carousel.min.css" rel="stylesheet" />
-    <link href="css/lib/owl.theme.default.min.css" rel="stylesheet" />
     <link href="css/helper.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -192,11 +191,11 @@
             <!-- Bread crumb -->
             <div class="row page-titles">
                 <div class="col-md-5 align-self-center">
-                    <h3 class="text-primary">Dashboard</h3> </div>
+                    <h3 class="text-primary">Discover</h3> </div>
                 <div class="col-md-7 align-self-center">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                        <li class="breadcrumb-item active">Dashboard</li>
+                        <li class="breadcrumb-item active">Discover</li>
                     </ol>
                 </div>
             </div>
@@ -209,8 +208,8 @@
                         <div class="card">
                             <img src="images/property1.jpg" id="incardpropertyimage"/>
                             <div id="innercard_headertext">
-                              <h2>4600 W Guadalupe St</h2>
-                              <p>Austin, TX 78751</p>
+                              <h2>4600 W Guadalupe Street</h2>
+                              <p>Austin, TX 78753</p>
                               <hr />
                               <div class="container-fluid">
                                 <div class="row justify-content-center">
@@ -219,15 +218,18 @@
                                     <p id="innercard_normaltext_subtext" >Market Value</p>
                                   </div>
                                   <div class ="col-md-4">
-                                    <h3>126</h3>
+                                    <h3>8,315</h3>
                                     <p id="innercard_normaltext_subtext" >Investors</p>
                                   </div>
                                   <div class ="col-md-4">
-                                    <h3>1,712</h3>
+                                    <h3>1,005</h3>
                                     <p id="innercard_normaltext_subtext" >Tokens</p>
                                   </div>
                                 </div>
                               </div>
+                            </div>
+                            <div id="discover_card_lower_banner_portfolio">
+                                <span id="discover_card_lower_banner_text">IN PORTFOLIO</span>  
                             </div>
                         </div>
                     </div>
@@ -255,6 +257,38 @@
                                 </div>
                               </div>
                             </div>
+                            <div id="discover_card_lower_banner_portfolio">
+                                <span id="discover_card_lower_banner_text">IN PORTFOLIO</span>  
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-md-offset-1">
+                        <div class="card">
+                            <img src="images/property5.jpg" id="incardpropertyimage"/>
+                            <div id="innercard_headertext">
+                              <h2>577 Wild Horse Dr. </h2>
+                              <p>Chambersburg, PA 17201</p>
+                              <hr />
+                              <div class="container-fluid">
+                                <div class="row justify-content-center">
+                                  <div class ="col-md-4">
+                                    <h3>$284,956</h3>
+                                    <p id="innercard_normaltext_subtext" >Market Value</p>
+                                  </div>
+                                  <div class ="col-md-4">
+                                    <h3>69</h3>
+                                    <p id="innercard_normaltext_subtext" >Investors</p>
+                                  </div>
+                                  <div class ="col-md-4">
+                                    <h3>4</h3>
+                                    <p id="innercard_normaltext_subtext" >Tokens</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div id="discover_card_lower_banner_unowned">
+                                <span id="discover_card_lower_banner_text">UNOWNED</span>  
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4 col-md-offset-1">
@@ -280,6 +314,67 @@
                                   </div>
                                 </div>
                               </div>
+                            </div>
+                            <div id="discover_card_lower_banner_portfolio">
+                                <span id="discover_card_lower_banner_text">IN PORTFOLIO</span>  
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-md-offset-1">
+                        <div class="card">
+                            <img src="images/property6.jpg" id="incardpropertyimage"/>
+                            <div id="innercard_headertext">
+                              <h2>82 North Rockwell Street </h2>
+                              <p>Owensboro, KY 42301</p>
+                              <hr />
+                              <div class="container-fluid">
+                                <div class="row justify-content-center">
+                                  <div class ="col-md-4">
+                                    <h3>$866,253</h3>
+                                    <p id="innercard_normaltext_subtext" >Market Value</p>
+                                  </div>
+                                  <div class ="col-md-4">
+                                    <h3>44</h3>
+                                    <p id="innercard_normaltext_subtext" >Investors</p>
+                                  </div>
+                                  <div class ="col-md-4">
+                                    <h3>9,495</h3>
+                                    <p id="innercard_normaltext_subtext" >Tokens</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div id="discover_card_lower_banner_new">
+                                <span id="discover_card_lower_banner_text">NEWLY LISTED</span>  
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-md-offset-1">
+                        <div class="card">
+                            <img src="images/property7.jpg" id="incardpropertyimage"/>
+                            <div id="innercard_headertext">
+                              <h2>976 Meadowbrook Drive</h2>
+                              <p>Charlotte, NC 28205</p>
+                              <hr />
+                              <div class="container-fluid">
+                                <div class="row justify-content-center">
+                                  <div class ="col-md-4">
+                                    <h3>$144,9778</h3>
+                                    <p id="innercard_normaltext_subtext" >Market Value</p>
+                                  </div>
+                                  <div class ="col-md-4">
+                                    <h3>126</h3>
+                                    <p id="innercard_normaltext_subtext" >Investors</p>
+                                  </div>
+                                  <div class ="col-md-4">
+                                    <h3>1,712</h3>
+                                    <p id="innercard_normaltext_subtext" >Tokens</p>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div id="discover_card_lower_banner_unowned">
+                                <span id="discover_card_lower_banner_text">UNOWNED</span>  
                             </div>
                         </div>
                     </div>
@@ -307,9 +402,12 @@
                                 </div>
                               </div>
                             </div>
+                            <div id="discover_card_lower_banner_portfolio">
+                                <span id="discover_card_lower_banner_text">IN PORTFOLIO</span>  
+                            </div>
                         </div>
                     </div>
-                <!-- End PAge Content -->
+            <!-- End PAge Content -->
             </div>
             <!-- End Container fluid  -->
             <!-- footer -->
@@ -330,30 +428,23 @@
     <script src="js/sidebarmenu.js"></script>
     <!--stickey kit -->
     <script src="js/lib/sticky-kit-master/dist/sticky-kit.min.js"></script>
-    <!--Custom JavaScript -->
 
 
-    <!-- Amchart -->
-     <script src="js/lib/morris-chart/raphael-min.js"></script>
-    <script src="js/lib/morris-chart/morris.js"></script>
-    <script src="js/lib/morris-chart/dashboard1-init.js"></script>
+    <script src="js/lib/datamap/d3.min.js"></script>
+    <script src="js/lib/datamap/topojson.js"></script>
+    <script src="js/lib/datamap/datamaps.world.min.js"></script>
+    <script src="js/lib/datamap/datamap-init.js"></script>
 
-
-	<script src="js/lib/calendar-2/moment.latest.min.js"></script>
-    <!-- scripit init-->
-    <script src="js/lib/calendar-2/semantic.ui.min.js"></script>
-    <!-- scripit init-->
-    <script src="js/lib/calendar-2/prism.min.js"></script>
-    <!-- scripit init-->
-    <script src="js/lib/calendar-2/pignose.calendar.min.js"></script>
-    <!-- scripit init-->
-    <script src="js/lib/calendar-2/pignose.init.js"></script>
-
+    <script src="js/lib/weather/jquery.simpleWeather.min.js"></script>
+    <script src="js/lib/weather/weather-init.js"></script>
     <script src="js/lib/owl-carousel/owl.carousel.min.js"></script>
     <script src="js/lib/owl-carousel/owl.carousel-init.js"></script>
-    <script src="js/scripts.js"></script>
-    <!-- scripit init-->
 
+
+    <script src="js/lib/chartist/chartist.min.js"></script>
+    <script src="js/lib/chartist/chartist-plugin-tooltip.min.js"></script>
+    <script src="js/lib/chartist/chartist-init.js"></script>
+    <!--Custom JavaScript -->
     <script src="js/custom.min.js"></script>
 
 </body>
