Added Property_1.html page

--- a/discover.html
+++ b/discover.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="images/logo.png">
-    <title>Armada | Analytics</title>
+    <title>Armada | Discover</title>
 
     <link href="css/lib/chartist/chartist.min.css" rel="stylesheet">
 	<link href="css/lib/owl.carousel.min.css" rel="stylesheet" />
@@ -322,7 +322,9 @@
                     </div>
                     <div class="col-md-4 col-md-offset-1">
                         <div class="card">
-                            <img src="images/property6.jpg" id="incardpropertyimage"/>
+                            <a href="property_1.html">
+                                <img src="images/property6.jpg" id="incardpropertyimage"/>
+                            </a>
                             <div id="innercard_headertext">
                               <h2>82 North Rockwell Street </h2>
                               <p>Owensboro, KY 42301</p>
@@ -359,7 +361,7 @@
                               <div class="container-fluid">
                                 <div class="row justify-content-center">
                                   <div class ="col-md-4">
-                                    <h3>$144,9778</h3>
+                                    <h3>$144,977</h3>
                                     <p id="innercard_normaltext_subtext" >Market Value</p>
                                   </div>
                                   <div class ="col-md-4">
